--- a/Files/Palestras/20240923 - 2024.2 - Anotações Aula Inaugural.md
+++ b/Files/Palestras/20240923 - 2024.2 - Anotações Aula Inaugural.md
@@ -118,7 +118,7 @@
   - 2020 - Laboratório de acesso livre - Linux - Seg a Sex; 8h às 22h
   - 2021 - Laboratório de acesso livre - Mac e Linux, acesso a internet cabeada - Seg a Sex; 8h às 22h
   - 2022 - Laboratório de acesso livre - W10 - Seg a Sex; 8h às 22h
-  - 3004 - Sala da pós graduação - Senha: *0330p
+  - 3004 - Sala da pós graduação - Senha: \*0330p
 - Normas de utilização e políticas de uso
   - Utilização
   - Aup-pt
@@ -194,7 +194,7 @@
     - Aprovação na 2ª etapa de qualificação: proposta de tese
     - Produção científica com o autor e em co-autoria com o orientador, considerando o Qualis/CAPES
     - Aprovação na defesa da tese
-- Instruções para *agora*
+- Instruções para _agora_
   - Todos matriculados em PAA
   - Interagir com Orientador
     - Sempre conversar com orientador
@@ -236,6 +236,7 @@
   - Cardápio do bandejão
   - Algumas salas.
 - Atividades Extraclasse
+
   - Happy hour da pós - 10 ou 11 de outubro
   - Interlabs: campeonato de peteca
   - Centro Esportivo Universitário (CEU)
@@ -244,7 +245,7 @@
   - Diretório Acadêmico - UFMG
   - Grêmio
   - DCE - Nivel mais alto de representação dos estudantes a nível
-  - Existe também o reitoria > icex >  DCC > PPGCC
+  - Existe também o reitoria > icex > DCC > PPGCC
   - Representação dos alunos
     - colegiado da pós graduação nível curso
 - Como saber o andamento da oferta de bolsas?
@@ -305,6 +306,6 @@
 
 ### Pensamentos
 
-- F = M*A é absurdamente simplificado
+- F = M\*A é absurdamente simplificado
 - A internet é inteligente? Grafos e neurônios.
 - O Professor é o ourives dos alunos
