--- a/Files/Palestras/20240923 - 2024.2 - Anotações Aula Inaugural.md
+++ b/Files/Palestras/20240923 - 2024.2 - Anotações Aula Inaugural.md
@@ -59,9 +59,9 @@
 
 ## 10h00 ~ 12h00 - Mesa redonda com o Berthier
 
-- Berthier tem relação com Google. Não entendi bemqual
+- Berthier tem relação com Google. Não entendi bem qual
 - Década de 80~90 e 10~20 foram décadas de baixo/nulo crescimento do PIB
-- O DCC tá muito bem posicionado na América Latina em relação ao impactor
+- O DCC tá muito bem posicionado na América Latina em relação ao impacto
 - > Launch Early|Often; Iterate Later
 - Tecnologia não se enquadra bem na lei trabalhista. "A gente trabalha de madrugada..."
 - Customized search solutions
