--- a/Files/Palestras/20240923 - 2024.2 - Anotações Aula Inaugural.md
+++ b/Files/Palestras/20240923 - 2024.2 - Anotações Aula Inaugural.md
@@ -118,7 +118,7 @@
   - 2020 - Laboratório de acesso livre - Linux - Seg a Sex; 8h às 22h
   - 2021 - Laboratório de acesso livre - Mac e Linux, acesso a internet cabeada - Seg a Sex; 8h às 22h
   - 2022 - Laboratório de acesso livre - W10 - Seg a Sex; 8h às 22h
-  - 3004 - Sala da pós graduação - Senha: \*0330p
+  - 3004 - Sala da pós graduação - Senha: `*0330p`
 - Normas de utilização e políticas de uso
   - Utilização
   - Aup-pt
